pagina del sistema

--- a/index.html
+++ b/index.html
@@ -1,69 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>
-		RueShady - HOME
-	</title>
-	<meta charset="utf-8">
-</head>
-<body class="bg-faded">
-	<div class="row">
-		<div class="container">
-			<div class="text-center">
-				<img src="media/DONE/Title.png" class="img-fluid" alt="Responsive image">
+	<head>
+		<title>
+			México nos une - Inicio
+		</title>
+		<meta charset="utf-8">
+	</head>
+
+	<body class="bg-faded">
+		<div class="row">
+			<div class="container">
+				<h1>
+					<br>
+				</h1>
+				<div class="row">
+					<div class="col-8">
+						<h5 class="text-center">hola</h5>
+					</div>
+					<div class="col-4">
+						<h5 class="text-center">hola</h5>
+					</div>
+				</div>
 			</div>
-
-			<h3 class="text-center text-justify"><i>"Un abogado defiende tu inocencia, un policía defiende la seguridad pública, un duelista defiende el honor de aquel que lo contrata"</i></h3>
-
-			<p class="text-justify">
-				<br>
-				Desde hace ya más de 5 generaciones la familia de Dauth tiene como oficio y tradición que al menos uno de sus integrantes se dedique al negocio familiar, desde hace más de 170 años, la familia de Dauth ha defendido el honor propio y de ajeno el que para ellos merece la pena ser defendido, incluso a costa de la propia vida, la historia de la familia inicia con el tatara tatara abuelo de Dauth, conocido por todos como Cuchilla, él defendió el honor de su familia y sus tierras que en aquel entonces el gobierno confederado desean quitarles, matando de un tiro certero en el corazón al capitán de brigada en combate singular en el medio de la calle principal de la ciudad.
-			</p>
-
-
-			<div class="text-center">
-				<img src="media/DONE/Duels abuelo cuchilla sepia sepia.jpg" class="img-fluid" alt="Responsive image" height="80%" width="80%">
-			</div>
-
-			<p class="text-justify">
-				<br>
-				En "The Duelist" tomarás el control de Dauth un joven que ve sus sueños de ser programador truncados por la muerte de su padre, el cual se dedicaba al negocio familiar toda su vida. A pesar de tener en cuenta que el negocio familiar llevaría a la muerte de aquel que lo siguiera algun dia Dauth, decide seguir los pasos de su padre y las generaciones que lo antecedieron en una manera de conmemorar la vida y obra de su padre, para despejar las dudas que él siempre tuvo sobre el duelo en donde su padre falleció. <br><br>
-
-				"The Duelist" sigue siendo un producto en etapa de prototipo, a continuación te mostramos parte del arte concepto.
-			</p>
-
-			<div class="row">
-	            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-	                <img src="media/DONE/Duels 1.png" class="img-responsive" height="90%" width="100%">
-	            </div>
-
-	            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-	                <img src="media/DONE/Duels 2.png" class="img-responsive" height="90%" width="100%">
-	            </div>
-
-	            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-	                <img src="media/DONE/Duels 3.png" class="img-responsive" height="90%" width="100%">
-	            </div>
-
-	            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-	                <img src="media/DONE/Duels 4.png" class="img-responsive" height="90%" width="100%">
-	            </div>
-
-	            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-	                <img src="media/DONE/Duels 5.png" class="img-responsive" height="90%" width="100%">
-	            </div>
-
-	            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-	                <img src="media/DONE/Duels 6.png" class="img-responsive" height="90%" width="100%">
-	            </div>
-			</div>
-
 		</div>
+		<!-- Scripts -->
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/custom.css">
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-	</div>
-	<!-- Scripts -->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-</body>
+	</body>
 </html>
